# agent_claude_sdk

./: .env.example  .gitignore  CLAUDE.md  README.md  project_desription.txt  pyproject.toml  pytest.ini  requirements.txt
app/: config.py  main.py
app/agents/: db_agent.py  db_planner_agent.py  planner_agent.py  quiz_agent.py  research_agent.py  review_agent.py  router_agent.py  tutor_agent.py
app/cli/: chat_cli.py  mcp_check.py
app/db/: connection.py  mcp_repository.py  repository.py  repository_factory.py  row_extract.py
app/graph/: builder.py  routing.py
app/llm/: ollama_client.py
app/mcp/: __init__.py  client.py  manager.py
app/models/: state.py
app/prompts/: db_planner.py  planner.py  quiz.py  research.py  router.py  tutor.py
app/rag/: ingest.py  retriever.py
app/schemas/: chat.py  planner.py  router.py
app/tools/: contracts.py  db_read.py  db_tool_models.py  db_tools.py  (+5 more)
db/: init.sql
kb/: langchain.md  langgraph.md  links.md  python_interview.md
scripts/: ingest_kb.py
specs/: db_agent_refactoring.md  quiz_agent_use_rag_for_quiz_gen.md  quiz_read_write_db.md  refactoring_plan.md
tests/: conftest.py  test_db_agent_errors.py  test_db_agent_routing.py  test_db_tool_llm_wrapper.py  test_db_tools_contracts.py  test_graph_builder_flow.py  test_graph_routing.py  test_llm_parse.py  test_main_chat_endpoint.py  test_quiz_answer_key_recovery.py  test_quiz_rag_relevance.py  test_quiz_routing.py  test_quiz_scoring.py  test_repository_factory.py  test_research_agent.py  test_router_agent.py  test_web_search.py  test_web_search_fallbacks.py
(+3 files in other folders)
